apps/lobe-chat/svc-egress-casdoor.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: casdoor.flamorz.com
  name: egress-casdoor
spec:
  externalName: unused
  type: ExternalName
