apps/lobe-chat/svc-egress-lobe.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: lobe.flamorz.com
  name: egress-lobe
spec:
  externalName: unused
  type: ExternalName
