apps/lobe-chat/svc-egress-minio.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: minio.flamorz.com
  name: egress-minio
spec:
  externalName: unused
  type: ExternalName
