apps/lobe-chat/ingress-casdoor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
  name: casdoor
spec:
  ingressClassName: tailscale
  rules:
    - host: casdoor.flamorz.com
      http:
        paths:
          - backend:
              service:
                name: casdoor
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - casdoor.flamorz.com
